# PiCa

./: Cargo.toml  README.md  build.rs  index.html
assets/: buffered_triangle.wgsl  cube_face_color.wgsl  line3d.wgsl  point_line.wgsl  triangles.wgsl
examples/: fiber_simple.rs  fiber_with_struct.rs  fiber_with_struct_kaput.rs  fiber_with_struct_works.rs  ptr_aliasing.rs  window.rs
examples/dx12/: dx12_triangle.rs
examples/webgpu/: gpu.rs  wgpu_cube.rs  wgpu_mesh.rs  wgpu_triangle.rs
examples/webgpu/gpu_buffers/: buffer_triangle.rs  square_index.rs
examples/webgpu/primitives/: point_line.rs  triangles.rs
examples/webgpu/uniform_buffers/: color_cube.rs  line3d.rs
src/: lib.rs  renderer.rs
src/lib/: dx12_renderer.rs  lib.rs  math.rs  pica_window.rs  renderer.rs  wgpu_renderer.rs  winit_window.rs
src/lib/wgpu_renderer/: camera.rs  mod.rs  scene.rs
