[package]
name = "PiCa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = 'PiCa'
path = "src/lib/lib.rs"


[[bin]]
name = "dx12-triangle"
path = "src/bin/dx12_triangle.rs"

[[bin]]
name = "wgpu-triangle"
path = "src/bin/wgpu_triangle.rs"


[dependencies]
raw-window-handle = "0.4"
array-init = "2.0.0"

[dependencies.windows]
version = "0.30.0"
features = [
     "Win32_Foundation",
     "Win32_Graphics_Gdi",
     "Win32_System_LibraryLoader",
     "Win32_UI_Input",
     "Win32_UI_WindowsAndMessaging",
     "Win32_System_Threading",
     "Win32_System_Performance",
     "Win32_Devices_HumanInterfaceDevice",
     "Win32_Globalization",
     "Win32_UI_Input_KeyboardAndMouse",
     "Win32_Graphics_Direct3D12",
     "Win32_Graphics_Direct3D",
     "Win32_Graphics_Dxgi",
     "Win32_Graphics_Dxgi_Common",
     "Win32_Graphics_Direct3D_Fxc",
     "Win32_Security",
     "Win32_System_WindowsProgramming",
]
