[package]
name = "PiCa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
wasm = []

[lib]
name = 'PiCa'
path = "src/lib/lib.rs"
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "dx12-triangle"
path = "src/bin/dx12_triangle.rs"

[[bin]]
name = "wgpu-triangle"
path = "src/bin/wgpu_triangle.rs"

[[bin]]
name = "glam"
path = "src/bin/glam.rs"

[[bin]]
name = "winit_window"
path = "src/bin/winit_window.rs"
required-features = ['wasm']


[dependencies]
winit = "0.26"
cfg-if = "*"
raw-window-handle = "*"
array-init = "*"
wgpu = "*"
pollster = "*"
env_logger = "*"
log = "*"
glam = '*'

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4"
instant = {version = "0.1", features = ["wasm-bindgen"]}
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}

[target.'cfg(target_arch = "x86_64")'.dependencies.windows]
version = "0.35.0"
features = [
     "Win32_Foundation",
     "Win32_Graphics_Gdi",
     "Win32_System_LibraryLoader",
     "Win32_UI_Input",
     "Win32_UI_WindowsAndMessaging",
     "Win32_System_Threading",
     "Win32_System_Performance",
     "Win32_Devices_HumanInterfaceDevice",
     "Win32_Globalization",
     "Win32_UI_Input_KeyboardAndMouse",
     "Win32_Graphics_Direct3D12",
     "Win32_Graphics_Direct3D",
     "Win32_Graphics_Dxgi",
     "Win32_Graphics_Dxgi_Common",
     "Win32_Graphics_Direct3D_Fxc",
     "Win32_Security",
     "Win32_System_WindowsProgramming",
]

[[example]]
name = "point_line"
path = "examples/webgpu/primitives/point_line.rs"

[[example]]
name = "triangles"
path = "examples/webgpu/primitives/triangles.rs"

[[example]]
name = "buffer_triangle"
path = "examples/webgpu/gpu_buffers/buffer_triangle.rs"

[[example]]
name = "square_index"
path = "examples/webgpu/gpu_buffers/square_index.rs"

[[example]]
name = "line3d"
path = "examples/webgpu/uniform_buffers/line3d.rs"

[[example]]
name = "color_cube"
path = "examples/webgpu/uniform_buffers/color_cube.rs"
