[package]
name = "PiCa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
wasm = []

[lib]
name = 'pica'
path = "src/lib/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = 'app'
path = "src/bin/app.rs"

[[example]]
name = "wgpu-line3d"
path = "examples/webgpu/line3d.rs"

[[example]]
name = "dx12-triangle"
path = "examples/dx12/dx12_triangle.rs"

[[example]]
name = "wgpu-cube"
path = "examples/webgpu/wgpu_cube.rs"

[[example]]
name = "wgpu-triangle"
path = "examples/webgpu/wgpu_triangle.rs"

[[example]]
name = "wgpu-mesh"
path = "examples/webgpu/wgpu_mesh.rs"

[[example]]
name = "gpu-info"
path = "examples/webgpu/gpu.rs"

[build-dependencies]
cc = "*"


[dependencies]
raw-window-handle = "*"
array-init = "*"
wgpu = "*"
pollster = "*"
env_logger = "*"
log = "*"
glam = '*'
bytemuck = { version = "1.4", features = [ "derive" ] }



[target.'cfg(target_arch = "x86_64")'.dependencies.windows]
version = "0.35.0"
features = [
     "Win32_Foundation",
     "Win32_Graphics_Gdi",
     "Win32_System_LibraryLoader",
     "Win32_UI_Input",
     "Win32_UI_WindowsAndMessaging",
     "Win32_System_Threading",
     "Win32_System_Performance",
     "Win32_Devices_HumanInterfaceDevice",
     "Win32_Globalization",
     "Win32_UI_Input_KeyboardAndMouse",
     "Win32_Graphics_Direct3D12",
     "Win32_Graphics_Direct3D",
     "Win32_Graphics_Dxgi",
     "Win32_Graphics_Dxgi_Common",
     "Win32_Graphics_Direct3D_Fxc",
     "Win32_Security",
     "Win32_System_WindowsProgramming",
]